--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://icons.iconarchive.com/icons/iconka/cat-commerce/128/client-icon.png" />
+    <link rel="icon" href="./img/client-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat as Service</title>
   </head>
